# Imagine

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: texture.glsl
src/: imagineapp.cpp  imagineapp.hpp  mineimatorapp.cpp  mineimatorapp.hpp
src/interface/: container.cpp  container.hpp  element.cpp  element.hpp  images.hpp  interfacehandler.cpp  interfacehandler.hpp  interfacestate.hpp  toolbar.cpp  toolbar.hpp  workspace.cpp  workspace.hpp
src/interface/controls/: button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  control.cpp  control.hpp  group.cpp  icons.hpp  labeledgroup.cpp  labeledgroup.hpp  row.cpp  row.hpp  scrollbar.cpp  scrollbar.hpp  textbox.cpp  textbox.hpp  textfield.cpp  textfield.hpp
src/interface/panels/: panel.cpp  panel.hpp
src/interface/panels/tabs/: tab.cpp  tab.hpp  tabsection.cpp  tabsection.hpp
src/interface/panels/tabs/init/: tabproperties.cpp  tabsettings.cpp  tabtimeline.cpp
src/interface/tabs/: tab.cpp  tab.hpp  tabcollection.cpp  tabcollection.hpp  tabsection.cpp  tabsection.hpp
src/interface/tabs/init/: tabproperties.cpp  tabsettings.cpp  tabtimeline.cpp
src/interface/views/: view.cpp  view.hpp
src/project/: projecthandler.cpp  projecthandler.hpp
src/settings/: settings.hpp
